# mobsf-cli

./: Cargo.toml  README.md
.github/workflows/: rust.yml
mobsf-cli/: Cargo.toml
mobsf-cli/src/: app.rs  cli.rs  error.rs  main.rs
mobsf-core/: Cargo.toml
mobsf-core/src/: error.rs  lib.rs  response.rs
