[package]
name = "mobsf-core"
version = "0.1.0"
edition = "2021"
authors = ["Wojciech Zurek <mail@wojciechzurek.eu>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json", "multipart", "stream"] }
serde = { version = "1.0", features = ["derive"] }
cli-table = "0.4"
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"